@@ -1,6 +1,0 @@
-Issues:
-* Need to detect/correct for Encumberment (Pathos), Traded, Dbox'ed, AH Dialog, and Crafting.
-* Event status fix. Dead status fix. Zoning status fix.
-* Need a Spellcast -> Lua converter before release.
-* Need to decide what the heck I'm doing with the second argument to user functions.
-* Change mob_array.type so that it matches validtarget.
